--- a/src/package.json
+++ b/src/package.json
@@ -8,7 +8,9 @@
   "engines": {
     "node": "^10.14.0"
   },
-  "dependencies": {},
+  "dependencies": {
+    "typeface-roboto": "0.0.75"
+  },
   "devDependencies": {
     "@babel/core": "^7.4.5",
     "@babel/preset-env": "^7.4.5",
