--- a/src/package.json
+++ b/src/package.json
@@ -25,6 +25,7 @@
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "^2.6.5",
+    "gulp-terser": "^1.4.0",
     "gulp-touch-fd": "^2.0.0",
     "gulp-uglify": "^3.0.2",
     "jquery": "^3.5.1",
