--- a/src/package.json
+++ b/src/package.json
@@ -19,6 +19,7 @@
     "browserify": "^16.5.2",
     "core-js": "^3.6.5",
     "d3": "^5.16.0",
+    "d3-force": "^2.1.1",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-pug": "^4.0.1",
