Translate hardcoded app title and headers into German

--- a/src/pug/config.json
+++ b/src/pug/config.json
@@ -1,5 +1,5 @@
 {
-  "siteName": "Simple Networks",
-  "siteDescription": "Adjust your neural network.",
+  "siteName": "Einfache Netze",
+  "siteDescription": "Passe das Neuronale Netzwerk an.",
   "siteURL": ""
 }
