--- a/src/package.json
+++ b/src/package.json
@@ -29,6 +29,7 @@
     "gulp-terser": "^1.4.0",
     "gulp-touch-fd": "^2.0.0",
     "gulp-uglify": "^3.0.2",
+    "interval-arithmetic": "^1.0.5",
     "jquery": "^3.5.1",
     "lodash": "^4.17.20",
     "node-sass": "^4.14.1",
