--- a/src/package.json
+++ b/src/package.json
@@ -14,12 +14,13 @@
   "devDependencies": {
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
+    "@svgdotjs/svg.js": "^3.0.16",
     "babelify": "^10.0.0",
+    "bezier-js": "^2.6.1",
     "bootstrap": "^4.5.2",
     "browserify": "^16.5.2",
     "core-js": "^3.6.5",
-    "d3": "^5.16.0",
-    "d3-force": "^2.1.1",
+    "events": "^3.2.0",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
     "gulp-pug": "^4.0.1",
