--- a/src/package.json
+++ b/src/package.json
@@ -9,6 +9,7 @@
     "node": ">=12.16.0"
   },
   "dependencies": {
+    "expression-eval": "^3.1.2",
     "typeface-roboto": "0.0.75"
   },
   "devDependencies": {
