--- a/assets/levels/Max.yaml
+++ b/assets/levels/Max.yaml
@@ -5,40 +5,24 @@ edges:
   - 'b -> max(a,b)'
   - 'h -> max(a,b)'
 
-activationFunctions:
-  negate:
-    f: 'z => -z' # TODO: sandbox evaluation (via sandboxed <iframe>?)
-    df: 'z => -1' # TODO: sandbox evaluation (via sandboxed <iframe>?)
-
-globalProperties:
-  nodes:
-    input: { range: [ 0, 1 ], value: 0 }
-    bias: { range: { min: -1, max: 1 }, value: 0 }
-    activationFunc: 'relu'
-  edges:
-    weight: { range: { min: 0, max: 1 }, value: 0.5 }
-
 properties:
   'a':
-    input: 1
+    input: {value: 0, range: {min: -5, max: 5}}
   'b':
-    input: 2
-  'h':
-    bias: { train: false }
-    activationFunc: 'negate'
-  'a -> h':
-    weight: 0.5
+    input: {value: 1, range: {min: -5, max: 5}}
 
 layout: [
   [ 'a', 'b' ],
-  [ 'h', '_' ],
+  [ 'h', '' ],
   [ 'max(a,b)' ],
 ]
 
 training:
-  'a': [ 0, 1, 2, 3 ]
-  'b': [ 3, 2, 1, 0 ]
-  'max(a,b)': [ 3, 2, 2, 3 ]
+  inputs:
+    'a': [ 0, 1, 2, 3 ]
+    'b': [ 3, 2, 1, 0 ]
+  outputs:
+    'max(a,b)': 'max(a,b)'
 
 title: 'Compute the maximum of the inputs'
 description:
