--- a/src/package.json
+++ b/src/package.json
@@ -14,8 +14,10 @@
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
+    "@babel/plugin-proposal-nullish-coalescing-operator": "^7.12.1",
     "@babel/preset-env": "^7.11.5",
     "@svgdotjs/svg.js": "^3.0.16",
+    "ajv": "^6.12.6",
     "babelify": "^10.0.0",
     "bezier-js": "^2.6.1",
     "bootstrap": "^4.5.2",
@@ -33,6 +35,7 @@
     "gulp-uglify": "^3.0.2",
     "interval-arithmetic": "^1.0.5",
     "jquery": "^3.5.1",
+    "js-yaml": "^3.14.0",
     "lodash": "^4.17.20",
     "node-sass": "^4.14.1",
     "popper.js": "^1.16.1-lts",
