--- a/src/package.json
+++ b/src/package.json
@@ -23,6 +23,7 @@
     "bootstrap": "^4.5.2",
     "browserify": "^16.5.2",
     "core-js": "^3.6.5",
+    "document-ready": "^2.0.2",
     "events": "^3.2.0",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
