--- a/src/package.json
+++ b/src/package.json
@@ -24,6 +24,9 @@
     "browserify": "^16.5.2",
     "core-js": "^3.6.5",
     "document-ready": "^2.0.2",
+    "eslint": "^7.2.0",
+    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint-plugin-import": "^2.22.1",
     "events": "^3.2.0",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
