--- a/src/package.json
+++ b/src/package.json
@@ -19,6 +19,7 @@
     "@svgdotjs/svg.js": "^3.0.16",
     "ajv": "^6.12.6",
     "babelify": "^10.0.0",
+    "bcp-47": "^1.0.8",
     "bezier-js": "^2.6.1",
     "bootstrap": "^4.5.2",
     "browserify": "^16.5.2",
@@ -37,6 +38,7 @@
     "interval-arithmetic": "^1.0.5",
     "jquery": "^3.5.1",
     "js-yaml": "^3.14.0",
+    "langmap": "0.0.16",
     "lodash": "^4.17.20",
     "node-sass": "^4.14.1",
     "popper.js": "^1.16.1-lts",
