--- a/src/package.json
+++ b/src/package.json
@@ -35,6 +35,9 @@
     "gulp-terser": "^1.4.0",
     "gulp-touch-fd": "^2.0.0",
     "gulp-uglify": "^3.0.2",
+    "i18next": "^19.8.3",
+    "i18next-browser-languagedetector": "^6.0.1",
+    "i18next-http-backend": "^1.0.21",
     "interval-arithmetic": "^1.0.5",
     "jquery": "^3.5.1",
     "js-yaml": "^3.14.0",
