--- a/src/package.json
+++ b/src/package.json
@@ -42,6 +42,7 @@
     "jquery": "^3.5.1",
     "js-yaml": "^3.14.0",
     "langmap": "0.0.16",
+    "loc-i18next": "^0.1.4",
     "lodash": "^4.17.20",
     "node-sass": "^4.14.1",
     "popper.js": "^1.16.1-lts",
