Rename node name label from 'node' to 'name' in file format

--- a/assets/levels/Max.yaml
+++ b/assets/levels/Max.yaml
@@ -34,17 +34,19 @@ description:
   de: 'In diesem Level ...'
 labels:
   'a':
-    node:
-      text: 'a'
+    name:
+      text:
+        de: 'a de'
+        en: 'a en'
     bias:
       permanent: true
       highlight: true
       text: "This is the bias of 'a'."
   'b':
-    node:
+    name:
       text: 'b'
   'max(a,b)':
-    node:
+    name:
       text: 'max(a,b)'
   'a -> h':
     weight:
