Localize network labels (attached via tippy.js) and training data

--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,7 @@ assets/js/dependencies.js
 assets/js/bundle.min.js.map
 assets/js/dependencies.min.js
 assets/js/dependencies.min.js.map
+assets/css/dependencies.css
+assets/css/dependencies.css.map
 assets/css/default.css
 assets/css/default.css.map
