--- a/assets/levels/Max.yaml
+++ b/assets/levels/Max.yaml
@@ -39,7 +39,7 @@ labels:
         de: 'a de'
         en: 'a en'
     bias:
-      permanent: true
+      alwaysOn: true
       highlight: true
       text: "This is the bias of 'a'."
   'b':
@@ -52,4 +52,4 @@ labels:
     weight:
       text:
         en: "This is the weight of the edge between 'a' and 'h'."
-        de: "Das ist die Gewichtung der Kante zwischen 'a' und 'b'."
+        de: "Das ist die Gewichtung der Kante zwischen 'a' und 'h'."
