--- a/src/package.json
+++ b/src/package.json
@@ -47,6 +47,7 @@
     "node-sass": "^4.14.1",
     "popper.js": "^1.16.1-lts",
     "regenerator-runtime": "^0.13.7",
+    "tippy.js": "^6.2.7",
     "vinyl-buffer": "^1.0.1",
     "vinyl-source-stream": "^2.0.0"
   },
