--- a/src/package.json
+++ b/src/package.json
@@ -41,6 +41,7 @@
     "i18next-browser-languagedetector": "^6.0.1",
     "i18next-http-backend": "^1.0.21",
     "interval-arithmetic": "^1.0.5",
+    "jquery": "^3.5.1",
     "js-yaml": "^3.14.0",
     "langmap": "0.0.16",
     "loc-i18next": "^0.1.4",
