Add svg outline filter to labels that overlap with edges

--- a/src/package.json
+++ b/src/package.json
@@ -30,6 +30,7 @@
     "vinyl-source-stream": "^2.0.0"
   },
   "dependencies": {
+    "@svgdotjs/svg.filter.js": "^3.0.7",
     "@svgdotjs/svg.js": "^3.0.16",
     "ajv": "^6.12.6",
     "bcp-47": "^1.0.8",
