--- a/assets/fonts/typeface-roboto/package.json
+++ b/assets/fonts/typeface-roboto/package.json
@@ -1,8 +1,37 @@
 {
-  "name": "typeface-roboto",
-  "version": "0.0.75",
+  "_args": [
+    [
+      "typeface-roboto@0.0.75",
+      "/Users/stussak/Desktop/IMAGINARY/I.AM.AI/simple-networks/src"
+    ]
+  ],
+  "_from": "typeface-roboto@0.0.75",
+  "_id": "typeface-roboto@0.0.75",
+  "_inBundle": false,
+  "_integrity": "sha512-VrR/IiH00Z1tFP4vDGfwZ1esNqTiDMchBEXYY9kilT6wRGgFoCAlgkEUMHb1E3mB0FsfZhv756IF0+R+SFPfdg==",
+  "_location": "/typeface-roboto",
+  "_phantomChildren": {},
+  "_requested": {
+    "type": "version",
+    "registry": true,
+    "raw": "typeface-roboto@0.0.75",
+    "name": "typeface-roboto",
+    "escapedName": "typeface-roboto",
+    "rawSpec": "0.0.75",
+    "saveSpec": null,
+    "fetchSpec": "0.0.75"
+  },
+  "_requiredBy": [
+    "/"
+  ],
+  "_resolved": "https://registry.npmjs.org/typeface-roboto/-/typeface-roboto-0.0.75.tgz",
+  "_spec": "0.0.75",
+  "_where": "/Users/stussak/Desktop/IMAGINARY/I.AM.AI/simple-networks/src",
+  "author": {
+    "name": "Kyle Mathews",
+    "email": "mathews.kyle@gmail.com"
+  },
   "description": "Roboto typeface",
-  "main": "index.css",
   "keywords": [
     "typeface",
     "font",
@@ -10,11 +39,12 @@
     "google fonts",
     "roboto"
   ],
-  "author": "Kyle Mathews <mathews.kyle@gmail.com>",
   "license": "MIT",
-  "repository": "https://github.com/KyleAMathews/typefaces/tree/master/packages/roboto"
-
-,"_resolved": "https://registry.npmjs.org/typeface-roboto/-/typeface-roboto-0.0.75.tgz"
-,"_integrity": "sha512-VrR/IiH00Z1tFP4vDGfwZ1esNqTiDMchBEXYY9kilT6wRGgFoCAlgkEUMHb1E3mB0FsfZhv756IF0+R+SFPfdg=="
-,"_from": "typeface-roboto@0.0.75"
+  "main": "index.css",
+  "name": "typeface-roboto",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/KyleAMathews/typefaces/tree/master/packages/roboto"
+  },
+  "version": "0.0.75"
 }
